--- a/Code/Calculatrice/mainwindow.ui
+++ b/Code/Calculatrice/mainwindow.ui
@@ -18,13 +18,13 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabPosition">
-       <enum>QTabWidget::West</enum>
+       <enum>QTabWidget::North</enum>
       </property>
       <property name="tabShape">
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -432,23 +432,6 @@
         <string>Reglages</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="1" column="3">
-         <widget class="QScrollArea" name="scrollArea">
-          <property name="widgetResizable">
-           <bool>true</bool>
-          </property>
-          <widget class="QWidget" name="scrollAreaWidgetContents">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>498</width>
-             <height>411</height>
-            </rect>
-           </property>
-          </widget>
-         </widget>
-        </item>
         <item row="6" column="0">
          <widget class="QPushButton" name="pushButton">
           <property name="text">
@@ -478,7 +461,7 @@
          </widget>
         </item>
         <item row="4" column="2">
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="spinBoxSaves">
           <property name="minimum">
            <number>5</number>
           </property>
@@ -521,23 +504,21 @@
         <item row="2" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Sons</string>
+           <string>Sounds</string>
           </property>
          </widget>
         </item>
         <item row="2" column="2">
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="checkBoxSounds">
           <property name="text">
            <string>Activé</string>
           </property>
          </widget>
         </item>
+        <item row="1" column="3">
+         <widget class="QTableView" name="tableViewIDs"/>
+        </item>
        </layout>
-      </widget>
-      <widget class="QWidget" name="tab_5">
-       <attribute name="title">
-        <string>Gest. var</string>
-       </attribute>
       </widget>
      </widget>
     </item>
